# compression-ocr-tester

./: .gitignore  Makefile  README.md  README_test_results.txt  main.py  pyproject.toml
