[tool.poetry]
name = "compression-ocr-tester"
version = "0.1.0"
description = "Test if OCR can read any text in compressed image"
authors = ["Wes Lorenzini <wes@wesworld.io>"]
readme = "README.md"
packages = [{include = "compression_ocr_tester"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.68"
pytesseract = "^0.3.10"
requests = "^2.28.2"
datetime = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
